# scctransport

./: .gitignore  README.md  package-lock.json  package.json
client/: .placeholder  index.html  package-lock.json  package.json  vite.config.js
client/public/: index.html
client/src/: App.css  App.js  App.jsx  ThemeContext.jsx  ThemeSwitcher.jsx  index.css  index.js  index.jsx
crow_server/: CMakeLists.txt  main.cpp  tests.cpp
crow_server/src/controllers/: AuthController.cpp  AuthController.hpp  CrewProfileController.cpp  CrewProfileController.hpp  EmployeeController.cpp  EmployeeController.hpp  GPSDataController.cpp  GPSDataController.hpp  PayrollController.cpp  PayrollController.hpp  RouteController.cpp  RouteController.hpp  VehicleController.cpp  VehicleController.hpp  WelfareController.cpp  WelfareController.hpp
crow_server/src/models/: CrewProfileModel.hpp  GPSDataModel.hpp  PayrollRecordModel.hpp  RouteModel.hpp  UserModel.hpp  VehicleModel.hpp  WelfareContributionModel.hpp
server/: .env  index.js  jest-mongodb-config.js  jest.config.js  package-lock.json  package.json
server/config/: db.js
server/controllers/: authController.js  crewProfileController.js  employeeController.js  gpsDataController.js  payrollController.js  routeDefinitionController.js  userVerificationController.js  vehicleController.js  welfareController.js
server/middleware/: authMiddleware.js  errorMiddleware.js
server/models/: CrewProfileModel.js  GPSDataModel.js  PayrollRecordModel.js  RouteModel.js  UserModel.js  VehicleModel.js  WelfareContributionModel.js
(+75 files in other folders)
